--- a/Note 2.ipynb
+++ b/Note 2.ipynb
@@ -506,9 +506,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1, 4):\n",
     "    for j in range(i):\n",
@@ -517,7 +530,7 @@
     "    \n",
     "for i in range(3, 0, -1):\n",
     "    for j in range(i):\n",
-    "        print('*', end=''\n",
+    "        print('*', end='')\n",
     "    print()"
    ]
   }
