+ 커피 자판기 코드라인 복습

--- a/Note 2.ipynb
+++ b/Note 2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,9 +19,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\ndef add(a, b) : # a, b는 매개변수 함수정의. 설계... 함수정의부의 params\\n    return a+b\\n\\nprint(add(3,4)) 함수 호출 3,4 인수... 함수 호출부의 argument\\n\\ncarculator라는 클래스에 부속되어 잇는 add라는 함수, 메소드\\n\\n----------------\\n\\n매개변수를 지정하여 호출하기\\n\\ndef sub(a, b):\\n     returm a - b\\n\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "\n",
@@ -37,14 +48,14 @@
     "매개변수를 지정하여 호출하기\n",
     "\n",
     "def sub(a, b):\n",
-    "     retirm a - b\n",
+    "     returm a - b\n",
     "\n",
     "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -473,40 +484,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "★\n",
-      "★★\n",
-      "★★★\n",
-      "********************************************************************************\n",
-      "★★★\n",
-      "★★\n",
-      "★\n"
+      "1 출력\n",
+      "2 출력\n",
+      "다음 문장\n"
      ]
     }
    ],
    "source": [
-    "for i in range(1, 4):\n",
-    "    for j in range(i):\n",
-    "        print('★', end='')\n",
-    "    print()\n",
-    "\n",
-    "print('*'*80)\n",
-    "\n",
-    "for i in range(3, 0, -1):\n",
-    "    for j in range(i):\n",
-    "        print('★', end='')\n",
-    "    print()"
+    "i = 0\n",
+    "while True:\n",
+    "    i += 1\n",
+    "    if i == 3:\n",
+    "        break\n",
+    "        print('3---출력')\n",
+    "    print(i,'출력')\n",
+    "print('다음 문장')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -533,13 +537,436 @@
     "        print('*', end='')\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 65일차 실습4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "#065일차-실습-4-해답-v1\n",
+    "star=\"*\"\n",
+    "for i in range(0,2): #0-1 : 증감종류\n",
+    "    for k in range(1,4): #1,2,3 : 줄(line)수\n",
+    "        if i==0:\n",
+    "            print(\"{}\".format(star*(i+k)))\n",
+    "        else:\n",
+    "            print(\"{}\".format(star*(4-k)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n",
+      "***\n",
+      "**\n",
+      "*\n",
+      "********************************************************************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "star = '*'\n",
+    "for i in range(0,2): #0-1\n",
+    "    for k in range(1,4): #1-4\n",
+    "        if i==0:\n",
+    "            print('{}'.format(star*(i+k)))\n",
+    "        else:\n",
+    "            print('{}'.format(star*(4-k)))\n",
+    "\n",
+    "\n",
+    "print('*'*80)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "for y in range(1,7):\n",
+    "    for x in range(1,4):\n",
+    "        if y>=x and (y-x)<4:\n",
+    "            print('*', end=\"\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in [1,2,3,3,2,1]:\n",
+    "    for k in [1]:\n",
+    "        g=i*k\n",
+    "    print('*'*g)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 실습"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3---출력\n",
+      "3---출력\n",
+      "3---출력\n",
+      "3---출력\n",
+      "5 출력\n",
+      "다음문장\n",
+      "********************************************************************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=0\n",
+    "while i<5:\n",
+    "    \n",
+    "    \n",
+    "#    \n",
+    "    i+=1\n",
+    "    if i ==3 :\n",
+    "        continue\n",
+    "    print(\"3---출력\")      # 종속문장\n",
+    "print(i, '출력')\n",
+    "print('다음문장')\n",
+    "\n",
+    "# for문보다 while문이 더 빡셈.\n",
+    "\n",
+    "\n",
+    "print('*'*80)\n",
+    "######################\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 출력\n",
+      "2 출력\n",
+      "4 출력\n",
+      "5 출력\n",
+      "다음 문장\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "while i < 5:\n",
+    "  i += 1\n",
+    "  if i == 3:\n",
+    "      continue\n",
+    "      print(\"3---출력\")\n",
+    "  print(i,\"출력\")\n",
+    "print(\"다음 문장\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 출력\n",
+      "2 출력\n",
+      "다음 문장\n"
+     ]
+    }
+   ],
+   "source": [
+    "# while문의 조건식\n",
+    "#while의 조건식에 True라는 불린값이 사용되면 종속문장을 무한 반복한다는 뜻.\n",
+    "\n",
+    "i = 0\n",
+    "while True:\n",
+    "  i += 1\n",
+    "  if i == 3:\n",
+    "      break\n",
+    "      print(\"3---출력\")\n",
+    "  print(i,\"출력\")\n",
+    "print(\"다음 문장\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 출력\n",
+      "2 출력\n",
+      "4 출력\n",
+      "5 출력\n",
+      "다음 문장\n"
+     ]
+    }
+   ],
+   "source": [
+    "# break문은 continue문에 대한 내용.\n",
+    "i = 0\n",
+    "while i < 5:\n",
+    "  i += 1\n",
+    "  if i == 3:\n",
+    "      continue\n",
+    "      print(\"3---출력\")\n",
+    "  print(i,\"출력\")\n",
+    "print(\"다음 문장\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 출력\n",
+      "2 출력\n",
+      "4 출력\n",
+      "다음 문장\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,5,1):\n",
+    "  if i == 3:\n",
+    "      continue\n",
+    "      print(\"3---출력\")\n",
+    "  print(i,\"출력\")\n",
+    "print(\"다음 문장\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### While 실습"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========커피 자판기==========\n",
+      "1. 커피(200)\t2. 코코아(250)\t3. 반환\t4. 종료\n",
+      "\n",
+      "맛있게 드세요\n",
+      "==========커피 자판기==========\n",
+      "1. 커피(200)\t2. 코코아(250)\t3. 반환\t4. 종료\n",
+      "\n",
+      "맛있게 드세요\n",
+      "==========커피 자판기==========\n",
+      "1. 커피(200)\t2. 코코아(250)\t3. 반환\t4. 종료\n",
+      "\n",
+      "반환 금액 :  50\n",
+      "==========커피 자판기==========\n",
+      "1. 커피(200)\t2. 코코아(250)\t3. 반환\t4. 종료\n",
+      "\n",
+      "프로그램 종료\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 066일차-실습-1 해답\n",
+    "money, j = 0, 0;\n",
+    "money = int(input('요금을 투입 하세요 : '))\n",
+    "while True:   # while의 종속문장을 무한반복 하도록 설계하였습니다.\n",
+    "              # 지정된 번호인 1 ~ 4 중의 한 가지를 입력했을 경우와 \n",
+    "              # 이외의  숫자를 잘못 입력했을 경우를 구분합니다.\n",
+    "    print(\"==========커피 자판기==========\")\n",
+    "    print(\"1. 커피(200)\\t2. 코코아(250)\\t3. 반환\\t4. 종료\\n\")\n",
+    "    j = int(input(\"메뉴를 선택하세요>>> \"))\n",
+    "    if j == 4:       # 종료를 선택함 \n",
+    "        break\n",
+    "    elif ((j == 1 and money < 200) or (j == 2 and money < 250)):\n",
+    "        print(\"요금이 부족합니다\")\n",
+    "    elif j == 1:       # 커피를 선택함 \n",
+    "        print(\"맛있게 드세요\")\n",
+    "        money -= 200    # 커피 금액을 요금에서 감산함\n",
+    "    elif j == 2:        # 코코아를 선택함 \n",
+    "        print(\"맛있게 드세요\")\n",
+    "        money -= 250    # 코코아 금액을 요금에서 감산함\n",
+    "    elif j == 3:        # 반환을 선택함 \n",
+    "        print('반환 금액 : ',money)\n",
+    "        money = 0       # 반환을 한 다음에 요금을 0으로 초기화함\n",
+    "    else:\n",
+    "        print(\"잘못입력하셨습니다\")   \n",
+    "print('프로그램 종료')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "500\n",
+      "True\n",
+      "==========커피 자판기==========\n",
+      "1. 커피(200)\t2. 코코아(250)\t3. 반환\t4. 종료\n",
+      "\n",
+      "맛있게 드세요\n",
+      "==========커피 자판기==========\n",
+      "1. 커피(200)\t2. 코코아(250)\t3. 반환\t4. 종료\n",
+      "\n",
+      "맛있게 드세요\n",
+      "==========커피 자판기==========\n",
+      "1. 커피(200)\t2. 코코아(250)\t3. 반환\t4. 종료\n",
+      "\n",
+      "반환 금액 :  50\n",
+      "==========커피 자판기==========\n",
+      "1. 커피(200)\t2. 코코아(250)\t3. 반환\t4. 종료\n",
+      "\n",
+      "프로그램 종료\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 066일차-실습-2해답\n",
+    "money, j = 0, 0;\n",
+    "while True :\n",
+    "    txt_money = input('요금을 투입 하세요 : ')\n",
+    "    print(txt_money)\n",
+    "    print(txt_money.isdigit())\n",
+    "    if txt_money.isdigit() : # isdigit()은 문자열이 정수인지 문자인지 판단해서 숫자라면 True를 반환함\n",
+    "        money = int(txt_money)\n",
+    "        break\n",
+    "    else :\n",
+    "        txt_money =''\n",
+    "        print('숫자를 입력하세요')\n",
+    "        continue\n",
+    "#\n",
+    "#money = int(    input('요금을 투입 하세요 : ')   )\n",
+    "while True:   # while의 종속문장을 무한반복 하도록 설계하였습니다.\n",
+    "              # 지정된 번호인 1 ~ 4 중의 한 가지를 입력했을 경우와\n",
+    "              # 이외의  숫자를 잘못 입력했을 경우를 구분합니다.\n",
+    "    print(\"==========커피 자판기==========\")\n",
+    "    print(\"1. 커피(200)\\t2. 코코아(250)\\t3. 반환\\t4. 종료\\n\")\n",
+    "    j = int(input(\"메뉴를 선택하세요>>> \"))\n",
+    "    if j == 4:       # 종료를 선택함\n",
+    "        break\n",
+    "    elif ((j == 1 and money < 200) or (j == 2 and money < 250)):\n",
+    "        print(\"요금이 부족합니다\")\n",
+    "    elif j == 1:       # 커피를 선택함\n",
+    "        print(\"맛있게 드세요\")\n",
+    "        money -= 200    # 커피 금액을 요금에서 감산함\n",
+    "    elif j == 2:        # 코코아를 선택함\n",
+    "        print(\"맛있게 드세요\")\n",
+    "        money -= 250    # 코코아 금액을 요금에서 감산함\n",
+    "    elif j == 3:        # 반환을 선택함\n",
+    "        print('반환 금액 : ',money)\n",
+    "        money = 0       # 반환을 한 다음에 요금을 0으로 초기화함\n",
+    "    else:\n",
+    "        print(\"잘못입력하셨습니다\")  \n",
+    "print('프로그램 종료')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "NvulyTarget",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -551,7 +978,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
