--- a/Note 2.ipynb
+++ b/Note 2.ipynb
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -877,19 +877,12 @@
     "        print(\"맛있게 드세요\")\n",
     "        money -= 250    # 코코아 금액을 요금에서 감산함\n",
     "    elif j == 3:        # 반환을 선택함 \n",
-    "        print('반환 금액 : ',money)\n",
-    "        money = 0       # 반환을 한 다음에 요금을 0으로 초기화함\n",
+    "        print('반환 금액 : ', money) #literal , money\n",
+    "        money = 0       # 반환을 한 다음에 요금을 0으로 초기화함  # if문이 필터링구문\n",
     "    else:\n",
     "        print(\"잘못입력하셨습니다\")   \n",
     "print('프로그램 종료')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -957,16 +950,16 @@
     "        print('반환 금액 : ',money)\n",
     "        money = 0       # 반환을 한 다음에 요금을 0으로 초기화함\n",
     "    else:\n",
-    "        print(\"잘못입력하셨습니다\")  \n",
+    "        print(\"잘못입력하셨습니다\")   # if문이 필터링구문\n",
     "print('프로그램 종료')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "NvulyTarget",
    "language": "python",
-   "name": "python3"
+   "name": "conda"
   },
   "language_info": {
    "codemirror_mode": {
@@ -978,7 +971,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
