--- a/Note 2.ipynb
+++ b/Note 2.ipynb
@@ -953,6 +953,88 @@
     "        print(\"잘못입력하셨습니다\")   # if문이 필터링구문\n",
     "print('프로그램 종료')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 실습"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_diamond(num):\n",
+    "    if num % 2 == 0 or num < 3:\n",
+    "        print('3 이상의 홀수를 입력하세요')\n",
+    "        return\n",
+    "    \n",
+    "    for i in range(1, num+1 ):\n",
+    "        if i <= num // 2 + 1:\n",
+    "            for j in range(num // 2 + 1 - i ):\n",
+    "                print(' ' ,end='')\n",
+    "            for j in range(2 * i -1):\n",
+    "                print('*', end='')\n",
+    "            print()\n",
+    "        else:\n",
+    "            for j in range(i - num // 2 - 1 ):\n",
+    "                print(' ', end='')\n",
+    "            for j in range(2 * (num - i ) +1 ):\n",
+    "                print('*', end='')\n",
+    "                print()\n",
+    "                \n",
+    "while True:\n",
+    "    num = int(input('홀수를 입력하세요 (0 입력 시 종료) : '))\n",
+    "    if num == 0:\n",
+    "        print('프로그램을 종료하세요.')\n",
+    "        break\n",
+    "    else:\n",
+    "        print_diamond(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "안녕하세요\n",
+      "\n",
+      "즐거운\n",
+      "\n",
+      "파이썬 프로그래밍\n",
+      "\n",
+      "안녕하세요\n",
+      "\n",
+      "즐거운\n",
+      "\n",
+      "파이썬 프로그래밍\n",
+      "\n",
+      "안녕하세요\n",
+      "\n",
+      "즐거운\n",
+      "\n",
+      "파이썬 프로그래밍\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_n_times(n, *values): #n번 반복\n",
+    "    for i in range(n):\n",
+    "        for value in values:\n",
+    "            print(value)\n",
+    "            \n",
+    "            print()\n",
+    "            \n",
+    "print_n_times(3, '안녕하세요', '즐거운', '파이썬 프로그래밍')"
+   ]
   }
  ],
  "metadata": {
