--- a/Note 2.ipynb
+++ b/Note 2.ipynb
@@ -963,33 +963,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    *\n",
+      "   ***\n",
+      "  *****\n",
+      " *******\n",
+      "*********\n",
+      " *******\n",
+      "  *****\n",
+      "   ***\n",
+      "    *\n",
+      "      *\n",
+      "     ***\n",
+      "    *****\n",
+      "   *******\n",
+      "  *********\n",
+      " ***********\n",
+      "*************\n",
+      " ***********\n",
+      "  *********\n",
+      "   *******\n",
+      "    *****\n",
+      "     ***\n",
+      "      *\n",
+      "       *\n",
+      "      ***\n",
+      "     *****\n",
+      "    *******\n",
+      "   *********\n",
+      "  ***********\n",
+      " *************\n",
+      "***************\n",
+      " *************\n",
+      "  ***********\n",
+      "   *********\n",
+      "    *******\n",
+      "     *****\n",
+      "      ***\n",
+      "       *\n",
+      "        *\n",
+      "       ***\n",
+      "      *****\n",
+      "     *******\n",
+      "    *********\n",
+      "   ***********\n",
+      "  *************\n",
+      " ***************\n",
+      "*****************\n",
+      " ***************\n",
+      "  *************\n",
+      "   ***********\n",
+      "    *********\n",
+      "     *******\n",
+      "      *****\n",
+      "       ***\n",
+      "        *\n"
+     ]
+    }
+   ],
    "source": [
     "def print_diamond(num):\n",
     "    if num % 2 == 0 or num < 3:\n",
-    "        print('3 이상의 홀수를 입력하세요')\n",
+    "        print(\"3 이상의 홀수를 입력해주세요.\")\n",
     "        return\n",
-    "    \n",
-    "    for i in range(1, num+1 ):\n",
+    "\n",
+    "    for i in range(1, num + 1):\n",
     "        if i <= num // 2 + 1:\n",
-    "            for j in range(num // 2 + 1 - i ):\n",
-    "                print(' ' ,end='')\n",
-    "            for j in range(2 * i -1):\n",
-    "                print('*', end='')\n",
+    "            for j in range(num // 2 + 1 - i):\n",
+    "                print(\" \", end=\"\")\n",
+    "            for j in range(2 * i - 1):\n",
+    "                print(\"*\", end=\"\")\n",
     "            print()\n",
     "        else:\n",
-    "            for j in range(i - num // 2 - 1 ):\n",
-    "                print(' ', end='')\n",
-    "            for j in range(2 * (num - i ) +1 ):\n",
-    "                print('*', end='')\n",
-    "                print()\n",
-    "                \n",
+    "            for j in range(i - num // 2 - 1):\n",
+    "                print(\" \", end=\"\")\n",
+    "            for j in range(2 * (num - i) + 1):\n",
+    "                print(\"*\", end=\"\")\n",
+    "            print()\n",
+    "\n",
     "while True:\n",
-    "    num = int(input('홀수를 입력하세요 (0 입력 시 종료) : '))\n",
+    "    num = int(input(\"홀수를 입력하세요 (0 입력 시 종료): \"))\n",
     "    if num == 0:\n",
-    "        print('프로그램을 종료하세요.')\n",
+    "        print(\"프로그램을 종료합니다.\")\n",
     "        break\n",
     "    else:\n",
     "        print_diamond(num)"
