--- a/Note 2.ipynb
+++ b/Note 2.ipynb
@@ -963,67 +963,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    *\n",
-      "   ***\n",
-      "  *****\n",
-      " *******\n",
-      "*********\n",
-      " *******\n",
-      "  *****\n",
-      "   ***\n",
-      "    *\n",
-      "      *\n",
-      "     ***\n",
-      "    *****\n",
-      "   *******\n",
-      "  *********\n",
-      " ***********\n",
-      "*************\n",
-      " ***********\n",
-      "  *********\n",
-      "   *******\n",
-      "    *****\n",
-      "     ***\n",
-      "      *\n",
-      "       *\n",
-      "      ***\n",
-      "     *****\n",
-      "    *******\n",
-      "   *********\n",
-      "  ***********\n",
-      " *************\n",
-      "***************\n",
-      " *************\n",
-      "  ***********\n",
-      "   *********\n",
-      "    *******\n",
-      "     *****\n",
-      "      ***\n",
-      "       *\n",
-      "        *\n",
-      "       ***\n",
-      "      *****\n",
-      "     *******\n",
-      "    *********\n",
-      "   ***********\n",
-      "  *************\n",
-      " ***************\n",
-      "*****************\n",
-      " ***************\n",
-      "  *************\n",
-      "   ***********\n",
-      "    *********\n",
-      "     *******\n",
-      "      *****\n",
-      "       ***\n",
-      "        *\n"
+      "3 이상의 홀수를 입력해주세요.\n",
+      "3 이상의 홀수를 입력해주세요.\n",
+      "3 이상의 홀수를 입력해주세요.\n",
+      " *\n",
+      "***\n",
+      " *\n",
+      "  *\n",
+      " ***\n",
+      "*****\n",
+      " ***\n",
+      "  *\n",
+      "프로그램을 종료합니다.\n"
      ]
     }
    ],
@@ -1049,7 +1007,7 @@
     "\n",
     "while True:\n",
     "    num = int(input(\"홀수를 입력하세요 (0 입력 시 종료): \"))\n",
-    "    if num == 0:\n",
+    "    if num == 0 :\n",
     "        print(\"프로그램을 종료합니다.\")\n",
     "        break\n",
     "    else:\n",
@@ -1058,43 +1016,305 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "In = 5; flag = 0; sp=In//2; st = 1;\n",
+    "i, j, num = 0, 0, 1;\n",
+    "while num:\n",
+    "    In = int(input('3 이상의 홀수의 줄수를 입력하시오 : '))\n",
+    "    If In % 2 == 0 or In < 3: # 이상의 짝수가 아니면 다시 입력하도록 함\n",
+    "        print('입력한 수가 틀렸습니다.')\n",
+    "        continue\n",
+    "    flag = 0 # 플래그를 의미하는 변수. 특정 시점에 다다르면\n",
+    "             # 반복에 사용한 증감의 규칙을 변경하는데사용됨\n",
+    "             # 마라톤의 반환점 정도로 비유\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "안녕하세요\n",
-      "\n",
-      "즐거운\n",
-      "\n",
-      "파이썬 프로그래밍\n",
-      "\n",
-      "안녕하세요\n",
-      "\n",
-      "즐거운\n",
-      "\n",
-      "파이썬 프로그래밍\n",
-      "\n",
-      "안녕하세요\n",
-      "\n",
-      "즐거운\n",
-      "\n",
-      "파이썬 프로그래밍\n",
-      "\n"
+      "    *\n",
+      "   ***\n",
+      "  *****\n",
+      " *******\n",
+      "*********\n",
+      " *******\n",
+      "  *****\n",
+      "   ***\n",
+      "    *\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 32\u001b[0m\n\u001b[0;32m     30\u001b[0m             sp \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     31\u001b[0m             st \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[1;32m---> 32\u001b[0m     num \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0.종료 1.계속 : \u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m     33\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m프로그램 종료\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
    "source": [
-    "def print_n_times(n, *values): #n번 반복\n",
-    "    for i in range(n):\n",
-    "        for value in values:\n",
-    "            print(value)\n",
-    "            \n",
-    "            print()\n",
-    "            \n",
-    "print_n_times(3, '안녕하세요', '즐거운', '파이썬 프로그래밍')"
+    "#066일차-실습-3-해답\n",
+    "ln = 5\n",
+    "flag = 0 \n",
+    "sp = ln//2\n",
+    "st = 1\n",
+    "i, j, num = 0, 0, 1;\n",
+    "while num: # while True 개념과 같다. \n",
+    "    ln = int(input('3 이상의 홀수의 줄수를 입력하세요 : '))\n",
+    "    if ln % 2 == 0 or ln < 3:   # 3 이상의 짝수가 아니면 다시입력하도록 함\n",
+    "        print('입력한 수가 틀렸습니다.')\n",
+    "        continue\n",
+    "    \n",
+    "    \n",
+    "    flag = 0    # 플래그를 의미하는 변수임. 특정 시점에 다다르면\n",
+    "                   # 반복에 사용한 증감의 규칙을 변경하는데 사용됨\n",
+    "                   # 마라톤의 반환점에 비유할 수 있음\n",
+    "    sp = ln//2  # 공백을 찍는데 사용하는 반복문의 변수임 # 얘는 2부터 시작\n",
+    "    st = 1       # 별을 찍는데 사용하는 반복문의 변수임  # 얘는 1부터 시작\n",
+    "    \n",
+    "    \n",
+    "    #숫자를 가지고 있는 수식\n",
+    "    for i in range (ln):        # 입력한 숫자(라인)를 사용하는 반복문 # ln에 5가 들어가면 1,2,3,4까지 반복하겠다는 뜻.\n",
+    "        for j in range(sp):    # 공백을 출력하는 반복문\n",
+    "            print(\" \", end='') # end='' 줄바꿈 방지용\n",
+    "        for j in range (st):   # 별을 출력하는 반복문\n",
+    "            print(\"*\", end='')\n",
+    "        print() # 줄바꿈하여라\n",
+    "        \n",
+    "        \n",
+    "        # 변경시켜주는 수식\n",
+    "        if i == (ln//2):        # 입력한 수의 반을 체크하여 flag를 변경함\n",
+    "            flag = 1\n",
+    "        if flag == 0:           # flag의 값에 따라 반복문의 증감 규칙을 다르게함\n",
+    "            sp -= 1\n",
+    "            st += 2\n",
+    "        else:\n",
+    "            sp += 1\n",
+    "            st -= 2\n",
+    "    num = int(input('0.종료 1.계속 : '))\n",
+    "print('프로그램 종료')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       *\n",
+      "      ***\n",
+      "     *****\n",
+      "    *******\n",
+      "   *********\n",
+      "  ***********\n",
+      " *************\n",
+      "***************\n",
+      " *************\n",
+      "  ***********\n",
+      "   *********\n",
+      "    *******\n",
+      "     *****\n",
+      "      ***\n",
+      "       *\n",
+      "                  *\n",
+      "                 ***\n",
+      "                *****\n",
+      "               *******\n",
+      "              *********\n",
+      "             ***********\n",
+      "            *************\n",
+      "           ***************\n",
+      "          *****************\n",
+      "         *******************\n",
+      "        *********************\n",
+      "       ***********************\n",
+      "      *************************\n",
+      "     ***************************\n",
+      "    *****************************\n",
+      "   *******************************\n",
+      "  *********************************\n",
+      " ***********************************\n",
+      "*************************************\n",
+      " ***********************************\n",
+      "  *********************************\n",
+      "   *******************************\n",
+      "    *****************************\n",
+      "     ***************************\n",
+      "      *************************\n",
+      "       ***********************\n",
+      "        *********************\n",
+      "         *******************\n",
+      "          *****************\n",
+      "           ***************\n",
+      "            *************\n",
+      "             ***********\n",
+      "              *********\n",
+      "               *******\n",
+      "                *****\n",
+      "                 ***\n",
+      "                  *\n",
+      "                  *\n",
+      "                 ***\n",
+      "                *****\n",
+      "               *******\n",
+      "              *********\n",
+      "             ***********\n",
+      "            *************\n",
+      "           ***************\n",
+      "          *****************\n",
+      "         *******************\n",
+      "        *********************\n",
+      "       ***********************\n",
+      "      *************************\n",
+      "     ***************************\n",
+      "    *****************************\n",
+      "   *******************************\n",
+      "  *********************************\n",
+      " ***********************************\n",
+      "*************************************\n",
+      " ***********************************\n",
+      "  *********************************\n",
+      "   *******************************\n",
+      "    *****************************\n",
+      "     ***************************\n",
+      "      *************************\n",
+      "       ***********************\n",
+      "        *********************\n",
+      "         *******************\n",
+      "          *****************\n",
+      "           ***************\n",
+      "            *************\n",
+      "             ***********\n",
+      "              *********\n",
+      "               *******\n",
+      "                *****\n",
+      "                 ***\n",
+      "                  *\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m i, j, num \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m;\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m num: \u001b[38;5;66;03m# while True 개념과 같다. \u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m     ln \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m3 이상의 홀수의 줄수를 입력하세요 : \u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m ln \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m ln \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m3\u001b[39m:   \u001b[38;5;66;03m# 3 이상의 짝수가 아니면 다시입력하도록 함\u001b[39;00m\n\u001b[0;32m     10\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m입력한 수가 틀렸습니다.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
+   "source": [
+    "#066일차-실습-3-해답\n",
+    "ln = 5\n",
+    "flag = 0 \n",
+    "sp = ln//2\n",
+    "st = 1\n",
+    "i, j, num = 0, 0, 1;\n",
+    "while num: # while True 개념과 같다. \n",
+    "    ln = int(input('3 이상의 홀수의 줄수를 입력하세요 : '))\n",
+    "    if ln % 2 == 0 or ln < 3:   # 3 이상의 짝수가 아니면 다시입력하도록 함\n",
+    "        print('입력한 수가 틀렸습니다.')\n",
+    "        continue\n",
+    "    \n",
+    "    \n",
+    "    flag = 0    # 플래그를 의미하는 변수임. 특정 시점에 다다르면\n",
+    "                   # 반복에 사용한 증감의 규칙을 변경하는데 사용됨\n",
+    "                   # 마라톤의 반환점에 비유할 수 있음\n",
+    "    sp = ln//2  # 공백을 찍는데 사용하는 반복문의 변수임 # 얘는 2부터 시작\n",
+    "    st = 1       # 별을 찍는데 사용하는 반복문의 변수임  # 얘는 1부터 시작\n",
+    "    \n",
+    "    \n",
+    "    #숫자를 가지고 있는 수식\n",
+    "    for i in range (ln):        # 입력한 숫자(라인)를 사용하는 반복문 # ln에 5가 들어가면 1,2,3,4까지 반복하겠다는 뜻.\n",
+    "        for j in range(sp):    # 공백을 출력하는 반복문\n",
+    "            print(\" \", end='') # end='' 줄바꿈 방지용\n",
+    "        for j in range (st):   # 별을 출력하는 반복문\n",
+    "            print(\"*\", end='')\n",
+    "        print() # 줄바꿈하여라\n",
+    "        \n",
+    "        \n",
+    "        # 변경시켜주는 수식\n",
+    "        if i == (ln//2):        # 입력한 수의 반을 체크하여 flag를 변경함\n",
+    "            flag = 1\n",
+    "        if flag == 0:           # flag의 값에 따라 반복문의 증감 규칙을 다르게함\n",
+    "            sp -= 1\n",
+    "            st += 2\n",
+    "        else:\n",
+    "            sp += 1\n",
+    "            st -= 2\n",
+    "    num = int(input('0.종료 1.계속 : '))\n",
+    "print('프로그램 종료')\n",
+    "\n",
+    "# 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#067일차-실습-1-해답\n",
+    "ln = 5; flag = 0; sp = ln//2; st = 1;\n",
+    "i, j, num = 0, 0, 1;\n",
+    "while num:\n",
+    "    ln = input('3 이상의 홀수의 줄수를 입력하세요 : ')\n",
+    "    ln = (int(ln) if ln.isdigit() else 0)\n",
+    "    #print(type(ln))\n",
+    "    #print('ln-->',ln)\n",
+    "    #print('num-->',num)\n",
+    "    #\n",
+    "    if ln % 2 == 0 or ln < 3 or not(str(ln).isdigit()):   # 3 이상의 짝수가 아니면 다시입력하도록 함\n",
+    "        print('입력한 수가 틀렸습니다.')\n",
+    "        continue\n",
+    "\n",
+    "    flag = 0    # 플래그를 의미하는 변수임. 특정 시점에 다다르면\n",
+    "                   # 반복에 사용한 증감의 규칙을 변경하는데 사용됨\n",
+    "                   # 마라톤의 반환점에 비유할 수 있음\n",
+    "    sp = ln//2  # 공백을 찍는데 사용하는 반복문의 변수임\n",
+    "    st = 1       # 별을 찍는데 사용하는 반복문의 변수임\n",
+    "    for i in range (ln):        # 입력한 숫자(라인)를 사용하는 반복문\n",
+    "        for j in range(sp):    # 공백을 출력하는 반복문\n",
+    "            print(\" \", end=\"\")\n",
+    "        for j in range (st):   # 별을 출력하는 반복문\n",
+    "            print(\"*\", end='')\n",
+    "        print()\n",
+    "        if i == (ln//2):        # 입력한 수의 반을 체크하여 flag를 변경함\n",
+    "            flag = 1\n",
+    "        if flag == 0:           # flag의 값에 따라 반복문의 증감 규칙을 다르게함\n",
+    "            sp -= 1\n",
+    "            st += 2\n",
+    "        else:\n",
+    "            sp += 1\n",
+    "            st -= 2\n",
+    "    while True:\n",
+    "        #num = int(input('0.종료 1.계속 : '))\n",
+    "        stopNgo = input('0.종료 1.계속 : ')\n",
+    "        test = (int(stopNgo) if stopNgo.isdigit() else stopNgo)\n",
+    "        if test == 0 :\n",
+    "            print('프로그램 종료')\n",
+    "            exit(0)\n",
+    "        elif test == 1 :\n",
+    "            break\n",
+    "        else:\n",
+    "            continue"
    ]
   }
  ],
