--- a/Note 2.ipynb
+++ b/Note 2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "'\\n\\ndef add(a, b) : # a, b는 매개변수 함수정의. 설계... 함수정의부의 params\\n    return a+b\\n\\nprint(add(3,4)) 함수 호출 3,4 인수... 함수 호출부의 argument\\n\\ncarculator라는 클래스에 부속되어 잇는 add라는 함수, 메소드\\n\\n----------------\\n\\n매개변수를 지정하여 호출하기\\n\\ndef sub(a, b):\\n     returm a - b\\n\\n'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -840,19 +840,21 @@
       "==========커피 자판기==========\n",
       "1. 커피(200)\t2. 코코아(250)\t3. 반환\t4. 종료\n",
       "\n",
-      "맛있게 드세요\n",
+      "잘못입력하셨습니다\n",
       "==========커피 자판기==========\n",
       "1. 커피(200)\t2. 코코아(250)\t3. 반환\t4. 종료\n",
-      "\n",
-      "맛있게 드세요\n",
-      "==========커피 자판기==========\n",
-      "1. 커피(200)\t2. 코코아(250)\t3. 반환\t4. 종료\n",
-      "\n",
-      "반환 금액 :  50\n",
-      "==========커피 자판기==========\n",
-      "1. 커피(200)\t2. 코코아(250)\t3. 반환\t4. 종료\n",
-      "\n",
-      "프로그램 종료\n"
+      "\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'escape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[47], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m==========커피 자판기==========\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1. 커피(200)\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m2. 코코아(250)\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m3. 반환\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m4. 종료\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 9\u001b[0m j \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m메뉴를 선택하세요>>> \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m j \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m4\u001b[39m:       \u001b[38;5;66;03m# 종료를 선택함 \u001b[39;00m\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'escape'"
      ]
     }
    ],
@@ -886,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,6 +1317,152 @@
     "            break\n",
     "        else:\n",
     "            continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverseCode():\n",
+    "    result, temp = 0,0\n",
+    "    result = int(input('수 입력: '))\n",
+    "    while True:\n",
+    "        temp = int(result % 10)\n",
+    "        result = int(result / 10)\n",
+    "        print(temp, end='')\n",
+    "        if not result:\n",
+    "            break\n",
+    "    print('프로그램 시작')\n",
+    "    reverseCode()\n",
+    "    print('\\n프로그램 종료')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 10 + 20 = 30\n",
+      "********************************************************************************\n",
+      "2 40 - 50 = -10\n",
+      "********************************************************************************\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[55], line 28\u001b[0m\n\u001b[0;32m     26\u001b[0m \tresult \u001b[38;5;241m=\u001b[39m su1\u001b[38;5;241m/\u001b[39msu2\n\u001b[0;32m     27\u001b[0m \t\u001b[38;5;28mprint\u001b[39m(name, su1, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m'\u001b[39m, su2, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m=\u001b[39m\u001b[38;5;124m'\u001b[39m, result)\n\u001b[1;32m---> 28\u001b[0m cal3()\n\u001b[0;32m     30\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m*\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m80\u001b[39m)\n\u001b[0;32m     32\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcal4\u001b[39m():\n",
+      "Cell \u001b[1;32mIn[55], line 23\u001b[0m, in \u001b[0;36mcal3\u001b[1;34m()\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcal3\u001b[39m():\n\u001b[1;32m---> 23\u001b[0m \tname, su1, op, su2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m실행결과 : \u001b[39m\u001b[38;5;124m'\u001b[39m)), \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m숫자 :\u001b[39m\u001b[38;5;124m'\u001b[39m)), \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m부호 :\u001b[39m\u001b[38;5;124m'\u001b[39m), \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m숫자:\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m     24\u001b[0m \tresult \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m     26\u001b[0m \tresult \u001b[38;5;241m=\u001b[39m su1\u001b[38;5;241m/\u001b[39msu2\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
+   "source": [
+    "def cal1():\n",
+    "    name, su1, op, su2 = int(input('실행결과 : ')), int(input('숫자 :')), input('부호 :'), int(input('숫자:'))\n",
+    "    result = 0\n",
+    "    \n",
+    "    result = su1+su2\n",
+    "    print(name, su1, '+', su2, '=', result)\n",
+    "cal1()    \n",
+    "\n",
+    "print('*'*80)\n",
+    "    \n",
+    "def cal2():\n",
+    "    name, su1, op, su2 = int(input('실행결과 : ')), int(input('숫자 :')), input('부호 :'), int(input('숫자:'))\n",
+    "    result = 0\n",
+    "    \n",
+    "    result = su1-su2\n",
+    "    print(name, su1, '-', su2, '=', result)\n",
+    "cal2()\n",
+    "\n",
+    "print('*'*80)\n",
+    "\n",
+    "def cal3():\n",
+    "\n",
+    "\tname, su1, op, su2 = int(input('실행결과 : ')), int(input('숫자 :')), input('부호 :'), int(input('숫자:'))\n",
+    "\tresult = 0\n",
+    "\n",
+    "\tresult = su1/su2\n",
+    "\tprint(name, su1, '/', su2, '=', result)\n",
+    "cal3()\n",
+    "\n",
+    "print('*'*80)\n",
+    "    \n",
+    "def cal4():\n",
+    "    name, su1, op, su2 = int(input('실행결과 : ')), int(input('숫자 :')), input('부호 :'), int(input('숫자:'))\n",
+    "    result = 0\n",
+    "    \n",
+    "    result = su1*su2\n",
+    "    print(name, su1, '*', su2, '=', result)\n",
+    "cal4()   \n",
+    "\n",
+    "print('*'*80)\n",
+    "    \n",
+    "def cal5():   \n",
+    "    name, su1, op, su2 = int(input('실행결과 : ')),int(input('숫자 :')), input('부호 :'), int(input('숫자:'))\n",
+    "    result = 0\n",
+    "    \n",
+    "    result = su1&su2\n",
+    "    print(name, su1, '&', su2, '=', result)\n",
+    "cal5()\n",
+    "\n",
+    "print('*'*80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#068일차-실습-1-해답 \n",
+    "#함수 호출에 인수가 있고 반환도 하는 사칙연산\n",
+    "def cal(su1, op, su2):\n",
+    "    result = 0\n",
+    "    if op=='+':\n",
+    "        result = su1+su2\n",
+    "    elif op=='-':\n",
+    "        result=su1-su2\n",
+    "    elif op=='*':\n",
+    "        result=su1*su2\n",
+    "    elif op=='/':\n",
+    "        result=su1/su2\n",
+    "    else:\n",
+    "        pass\n",
+    "    return result\n",
+    "\n",
+    "su1,op,su2 = int(input(\"숫자:\")),input(\"부호 :\"),int(input(\"숫자:\"))\n",
+    "result=cal(su1,op,su2)\n",
+    "if op == '+' or op == '-' or op == '*' or op == '/' :\n",
+    "    print(su1,op,su2,'=',result)\n",
+    "else:\n",
+    "    print(\"사칙연산만 가능합니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cal1():\n",
+    "    name, su1, op, su2 = int(input('실행결과 : ')), int(input('숫자 :')), input('부호 :'), int(input('숫자:'))\n",
+    "    result = 0\n",
+    "    \n",
+    "    result = su1+su2\n",
+    "    print(name, su1, '+', su2, '=', result)\n",
+    "cal1()    "
    ]
   }
  ],
