--- a/Note 2.ipynb
+++ b/Note 2.ipynb
@@ -1428,7 +1428,7 @@
    "source": [
     "#068일차-실습-1-해답 \n",
     "#함수 호출에 인수가 있고 반환도 하는 사칙연산\n",
-    "def cal(su1, op, su2):\n",
+    "def cal(su1, op, su2): #매개변수\n",
     "    result = 0\n",
     "    if op=='+':\n",
     "        result = su1+su2\n",
@@ -1440,29 +1440,248 @@
     "        result=su1/su2\n",
     "    else:\n",
     "        pass\n",
-    "    return result\n",
+    "    return result # 정의부\n",
     "\n",
-    "su1,op,su2 = int(input(\"숫자:\")),input(\"부호 :\"),int(input(\"숫자:\"))\n",
-    "result=cal(su1,op,su2)\n",
+    "su1,op,su2 = int(input(\"숫자:\")),input(\"부호 :\"),int(input(\"숫자:\")) # \n",
+    "result=cal(su1,op,su2) # 인수, 리턴 우측 su1, su2 인수를 위의 정의부의 매개변수에 이 두 개의 인수를 매개변수에 복사의 방식으로 한다. 즉, 전달했다.\n",
     "if op == '+' or op == '-' or op == '*' or op == '/' :\n",
     "    print(su1,op,su2,'=',result)\n",
     "else:\n",
-    "    print(\"사칙연산만 가능합니다.\")"
+    "    print(\"사칙연산만 가능합니다.\")\n",
+    "\n",
+    "\n",
+    "# 짝이 되는 이름 : create, delete\n",
+    "# 예상되는 이름 : get_user_data, set_user_data\n",
+    "# modify_user_data() \n",
+    "# set_user_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[72], line 15\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m result \u001b[38;5;66;03m# 정의부\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m su1,op,su2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m숫자:\u001b[39m\u001b[38;5;124m\"\u001b[39m)),\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m부호 :\u001b[39m\u001b[38;5;124m\"\u001b[39m),\u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m숫자:\u001b[39m\u001b[38;5;124m\"\u001b[39m)) \u001b[38;5;66;03m# \u001b[39;00m\n\u001b[0;32m     16\u001b[0m result\u001b[38;5;241m=\u001b[39mcal(su1,op,su2) \u001b[38;5;66;03m# 인수, 리턴 우측 su1, su2 인수를 위의 정의부의 매개변수에 이 두 개의 인수를 매개변수에 복사의 방식으로 한다. 즉, 전달했다.\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m op \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m+\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m op \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m op \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m*\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m op \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m'\u001b[39m :\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
    "source": [
-    "def cal1():\n",
-    "    name, su1, op, su2 = int(input('실행결과 : ')), int(input('숫자 :')), input('부호 :'), int(input('숫자:'))\n",
+    "def cal(su1, op, su2): #매개변수\n",
     "    result = 0\n",
+    "    if op=='+':\n",
+    "        result = su1+su2\n",
+    "    elif op=='-':\n",
+    "        result=su1-su2\n",
+    "    elif op=='*':\n",
+    "        result=su1*su2\n",
+    "    elif op=='/':\n",
+    "        result=su1/su2\n",
+    "    else:\n",
+    "        pass\n",
+    "    return result # 정의부\n",
+    "\n",
+    "su1,op,su2 = int(input(\"숫자:\")),input(\"부호 :\"),int(input(\"숫자:\")) # \n",
+    "result=cal(su1,op,su2) # 인수, 리턴 우측 su1, su2 인수를 위의 정의부의 매개변수에 이 두 개의 인수를 매개변수에 복사의 방식으로 한다. 즉, 전달했다.\n",
+    "if op == '+' or op == '-' or op == '*' or op == '/' :\n",
+    "    print(su1,op,su2,'=',result)\n",
+    "else:\n",
+    "    print(\"사칙연산만 가능합니다.\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 - 3 = 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 068일차-실습-2-해답 -ver1\n",
+    "def mySum(Num1,Num2):   # 덧셈연산 함수\n",
+    "    return Num1 + Num2  # 덧셈연산 결과를 반환함 \n",
+    "def mySub(Num1,Num2):   # 뺄셈연산 함수 \n",
+    "    return Num1 - Num2  # 뺄셈연산 결과를 반환함\n",
+    "def myMul(Num1,Num2):   # 곱셈연산 함수 \n",
+    "    return Num1 * Num2  # 곱셈연산 결과를 반환함\n",
+    "def myDiv(Num1,Num2):   # 나눗셈연산 함수 \n",
+    "    return Num1 / Num2  # 나눗셈연산 결과를 반환함\n",
+    "#\n",
+    "num1 = int(input(\"첫번째 정수를 입력 : \"))\n",
+    "oop = input(\"부호를 입력하세요 : \")\n",
+    "num2 = int(input(\"두번째 정수를 입력 : \"))\n",
+    "#\n",
+    "if oop == \"+\" : \n",
+    "    result = mySum(num1,num2) \n",
+    "elif oop == \"-\" : \n",
+    "    result = mySub(num1,num2)\n",
+    "elif oop == \"*\" : \n",
+    "    result = myMul(num1,num2)\n",
+    "elif oop == \"/\" : \n",
+    "    result = myDiv(num1,num2)\n",
+    "else :\n",
+    "    print(f'연산자가 오류입니다')\n",
+    "#\n",
+    "print(num1,oop,num2,'=',result) # result를 출력함\n",
+    "\n",
+    "# my_num() <-- 스네이크테일법(언더바)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 + 5 = 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "def mySum(Num1,Num2):   # 덧셈연산 함수\n",
+    "    return Num1 + Num2  # 덧셈연산 결과를 반환함 \n",
+    "def mySub(Num1,Num2):   # 뺄셈연산 함수 \n",
+    "    return Num1 - Num2  # 뺄셈연산 결과를 반환함\n",
+    "def myMul(Num1,Num2):   # 곱셈연산 함수 \n",
+    "    return Num1 * Num2  # 곱셈연산 결과를 반환함\n",
+    "def myDiv(Num1,Num2):   # 나눗셈연산 함수 \n",
+    "    return Num1 / Num2  # 나눗셈연산 결과를 반환함\n",
+    "#\n",
+    "num1 = int(input(\"첫번째 정수를 입력 : \"))\n",
+    "oop = input(\"부호를 입력하세요 : \")\n",
+    "num2 = int(input(\"두번째 정수를 입력 : \"))\n",
+    "#\n",
+    "# expr‎‎‎‎‎‎‎‎‎ 딕셔너리를 만듬\n",
+    "# expr‎‎‎‎‎‎‎‎‎ 딕셔너리는 연산자를 키로 갖고 함수호출문장을\n",
+    "# 값으로 가진 쌍들이 4쌍 존재함 \n",
+    "expr={\"+\" : mySum(num1,num2), \"-\" : mySub(num1,num2), \"*\" : myMul(num1,num2), \"/\" : myDiv(num1,num2)}\n",
+    "#\n",
+    "# expr‎‎‎‎‎‎‎‎‎ 딕셔너리를 get함수를 이용하여 사용자가 input\n",
+    "# 을 이용하여 입력한 연산자에 대응하는 결과값을 result에 할당함\n",
+    "#\n",
+    "result = expr.get(oop,'연산자가 오류입니다.')\n",
+    "#\n",
+    "print(num1,oop,num2,'=',result) # result를 출력함"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "입력 값 : 4 짝수입니다. \n"
+     ]
+    }
+   ],
+   "source": [
+    "def meoseum(num1):\n",
+    "    return num1 % 2 ==0\n",
+    "\n",
+    "def manim():\n",
+    "    num1 = int(input('수 입력: '))\n",
     "    \n",
-    "    result = su1+su2\n",
-    "    print(name, su1, '+', su2, '=', result)\n",
-    "cal1()    "
+    "    if meoseum(num1):\n",
+    "        print(f'입력 값 : {num1} 짝수입니다. ')\n",
+    "    else:\n",
+    "        print(f'입력 값 : {num1} 홀수입니다. ')\n",
+    "manim()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "입력 값 : 15 홀수입니다. \n"
+     ]
+    }
+   ],
+   "source": [
+    "def meoseum(num1):\n",
+    "    return num1 % 2 == 0\n",
+    "\n",
+    "def manim():\n",
+    "    num1 = int(input('수 입력 : '))\n",
+    "    \n",
+    "    if meoseum(num1):\n",
+    "        print(f'입력 값 : {num1} 짝수입니다. ')\n",
+    "    else:\n",
+    "        print(f'입력 값 : {num1} 홀수입니다. ')\n",
+    "        \n",
+    "manim()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "수 입력 : 12 \n",
+      "3의 배수입니다. \n",
+      "********************************************************************************\n",
+      "입력 값 : 13 \n",
+      "3의 배수가 아닙니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def meoseum(num1):\n",
+    "    return num1 % 3 == 0\n",
+    "\n",
+    "def manim():\n",
+    "    num1 = int(input('수 입력 : '))\n",
+    "    \n",
+    "    if meoseum(num1):\n",
+    "        print(f'수 입력 : {num1} \\n3의 배수입니다. ')\n",
+    "    else:\n",
+    "        print(f'입력 값 : \\n{num1} 3의 배수가 아닙니다.')\n",
+    "\n",
+    "manim()\n",
+    "\n",
+    "print('*'*80)\n",
+    "\n",
+    "def meoseum(num2):\n",
+    "    return num2 % 3 == 0\n",
+    "\n",
+    "def manim():\n",
+    "    num2 = int(input('수 입력 : '))\n",
+    "    \n",
+    "    if meoseum(num2):\n",
+    "        print(f'수 입력 : {num2} \\n3의 배수입니다. ')\n",
+    "    else:\n",
+    "        print(f'입력 값 : {num2} \\n3의 배수가 아닙니다.')\n",
+    "\n",
+    "manim()"
    ]
   }
  ],
