--- a/Note 2.ipynb
+++ b/Note 2.ipynb
@@ -1683,6 +1683,174 @@
     "\n",
     "manim()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5와 2중 최댓값은 : \n",
+      "5\n",
+      "5와 2중 최솟값은 : \n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def meoseum(num1,num2):\n",
+    "    return max(num1, num2)\n",
+    "\n",
+    "\n",
+    "def manim(num1,num2):\n",
+    "    return min(num1, num2)\n",
+    "num1 = int(input('숫자 : '))\n",
+    "num2 = int(input('숫자 : '))\n",
+    "\n",
+    "max_value = meoseum(num1, num2)\n",
+    "print(f'{num1}와 {num2}중 최댓값은 : \\n{max_value}')\n",
+    "\n",
+    "min_value = manim(num1, num2)\n",
+    "print(f'{num1}와 {num2}중 최솟값은 : \\n{min_value}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "결과 : 5\n",
+      "5와 2 중 최댓값은 = 5\n",
+      "결과 : 2\n",
+      "5와 2 중 최솟값은 = 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def meoseum(num1, num2, option):\n",
+    "\tif option == 'B':\n",
+    "\t\treturn max(num1, num2)\n",
+    "\telif option == 'S':\n",
+    "\t\treturn min(num1, num2)\n",
+    "\telse :\n",
+    "\t\treturn \"올바른 옵션을 입력하시오 ('B' or 'S')\"\n",
+    "\n",
+    "def manim():\n",
+    "\tnum1 = int(input('숫자 : '))\n",
+    "\tnum2 = int(input('숫자 : '))\n",
+    "\toption = input('최댓값은 B, 최솟값은 S : ')\n",
+    "\n",
+    "\tresult = meoseum(num1, num2, option)\n",
+    "\tprint(f'결과 : {result}')\n",
+    "\n",
+    "\tif option == 'B':\n",
+    "\t\tprint(f'{num1}와 {num2} 중 최댓값은 = {result}')\n",
+    "\telif option == 'S':\n",
+    "\t\tprint(f'{num1}와 {num2} 중 최솟값은 = {result}')\n",
+    "\telse:\n",
+    "\t\tprint(result)\n",
+    "manim()\n",
+    "\n",
+    "def meoseum(num1, num2, option):\n",
+    "\tif option == 'B':\n",
+    "\t\treturn max(num1, num2)\n",
+    "\telif option == 'S':\n",
+    "\t\treturn min(num1, num2)\n",
+    "\telse :\n",
+    "\t\treturn \"올바른 옵션을 입력하시오 ('B' or 'S')\"\n",
+    "\n",
+    "def manim():\n",
+    "\tnum1 = int(input('숫자 : '))\n",
+    "\tnum2 = int(input('숫자 : '))\n",
+    "\toption = input('최댓값은 B, 최솟값은 S : ')\n",
+    "\n",
+    "\tresult = meoseum(num1, num2, option)\n",
+    "\tprint(f'결과 : {result}')\n",
+    "\n",
+    "\tif option == 'B':\n",
+    "\t\tprint(f'{num1}와 {num2} 중 최댓값은 = {result}')\n",
+    "\telif option == 'S':\n",
+    "\t\tprint(f'{num1}와 {num2} 중 최솟값은 = {result}')\n",
+    "\telse:\n",
+    "\t\tprint(result)\n",
+    "manim()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "최대값 / 최소값 판단 프로그램입니다.\n",
+      "최대값, 최소값 선택 입력이 오류입니다.\n",
+      "최대값 / 최소값 판단 프로그램입니다.\n",
+      "5 와 2 중 최대값은  5 입니다.\n",
+      "최대값 / 최소값 판단 프로그램입니다.\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[116], line 20\u001b[0m\n\u001b[0;32m     18\u001b[0m os\u001b[38;5;241m.\u001b[39msystem(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcls\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m최대값 / 최소값 판단 프로그램입니다.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 20\u001b[0m su1,op,su2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m숫자:\u001b[39m\u001b[38;5;124m\"\u001b[39m)),\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m최대값은 B 최소값은 S 종료는 x 입력 :\u001b[39m\u001b[38;5;124m\"\u001b[39m),\u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m숫자:\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m op\u001b[38;5;241m==\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mX\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m op \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m     22\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m종료합니다.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
+   "source": [
+    "# 068일차-실습-6-해답-ver1\n",
+    "# \n",
+    "import os    # 화면을 클리어 하는 도스명령어 cls를 사용하기 위한 \n",
+    "            # 함수인 system( ) 을 사용하기 위함\n",
+    "def myMax(firstNum, secondNum):\n",
+    "    if firstNum > secondNum:\n",
+    "        return firstNum\n",
+    "    else:\n",
+    "        return secondNum # 여기까지가 위에 myMax(firstNum, secondsNum) 매개변수의 내용의 크기.\n",
+    "\n",
+    "def myMin(firstNum, secondNum):\n",
+    "    if firstNum < secondNum:\n",
+    "        return firstNum\n",
+    "    else:\n",
+    "        return secondNum\n",
+    "\n",
+    "while (True) : #여기까진 함수 선언\n",
+    "    os.system('cls')\n",
+    "    print(\"최대값 / 최소값 판단 프로그램입니다.\")\n",
+    "    su1,op,su2 = int(input(\"숫자:\")),input(\"최대값은 B 최소값은 S 종료는 x 입력 :\"),int(input(\"숫자:\"))\n",
+    "    if op=='X' or op == 'x':\n",
+    "        print('종료합니다.')\n",
+    "        break \n",
+    "    elif su1 == su2 :\n",
+    "        print(\"최대값, 최소값이 같습니다.\")\n",
+    "        input(\"앤터키를치세요\")      \n",
+    "    elif op == 'B' or op == 'b':\n",
+    "        result=myMax(su1, su2) \n",
+    "        print(su1,'와',su2,'중 최대값은 ',result,'입니다.')\n",
+    "        input(\"앤터키를치세요\")\n",
+    "    elif op=='S' or op == 's':\n",
+    "        result=myMin(su1, su2)\n",
+    "        print(su1,'와',su2,'중 최소값은 ',result,'입니다.')\n",
+    "        input(\"앤터키를치세요\")\n",
+    "    else :\n",
+    "        print(\"최대값, 최소값 선택 입력이 오류입니다.\")\n",
+    "        input(\"앤터키를치세요\")"
+   ]
   }
  ],
  "metadata": {
