--- a/class_function.ipynb
+++ b/class_function.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -206,14 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 + 3 = 8\n"
+      "5 + 2 = 7\n"
      ]
     }
    ],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
       "minus = -10\n",
       "plus = 150\n",
       "minu = 50\n",
-      "1493858121424 1493858123344\n"
+      "2585179502352 2585144363728\n"
      ]
     }
    ],
@@ -293,6 +293,209 @@
     "print('minu =', obj2.minus())\n",
     "\n",
     "print(id(obj), id(obj2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "~~객체 생성~~\n",
+      "plus =  30\n",
+      "minus = -10\n",
+      "~~객체 생성~~\n",
+      "plus =  160\n",
+      "minus = -20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 068.5일차-실습-2-해답\n",
+    "# 클래스 정의\n",
+    "class calc_class :\n",
+    "    # 변수 선언\n",
+    "    x = y = 0\n",
+    "    # 생성자 : 객체 생성 + [멤버변수 초기화]\n",
+    "    def __init__(self, a, b): #지역변수 _(underbar) 숨김메소드이면서 어쩌고저쩌고...몰라도됨\n",
+    "        print('~~객체 생성~~')\n",
+    "        self.x = a # 10\n",
+    "        self.y = b # 20\n",
+    "        # 클래스를 만들땐 생성자를 무조건 만들어준다.\n",
+    "    # 멤버 함수(기능)\n",
+    "    def plus(self): # self : 멤버(변수+함수) 참조 객체\n",
+    "        p = self.x + self.y\n",
+    "        '''\n",
+    "        p : 지역변수\n",
+    "        self.x, self.y : 전역변수  \n",
+    "        '''\n",
+    "        return p\n",
+    "    def minus(self):\n",
+    "        m = self.x - self.y\n",
+    "        return m\n",
+    "# class(1) -> object(n) 생성\n",
+    "obj1 = calc_class(10, 20) # 생성자 -> 객체1  \n",
+    "# object.member()  \n",
+    "print('plus = ', obj1.plus()) # plus =  30\n",
+    "print('minus =', obj1.minus()) # minus = -10\n",
+    "#\n",
+    "obj03 = calc_class(70,90)\n",
+    "print('plus = ', obj03.plus())\n",
+    "print('minus =', obj03.minus())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 12) (3335676662.py, line 12)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[11], line 12\u001b[1;36m\u001b[0m\n\u001b[1;33m    print('자동차는 %d cc이고, 문짝은 %d개, 타입은 %s\"\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "    cc = 0 #엔진 cc\n",
+    "    door = 0 #문짝 개수\n",
+    "    carType = None # null\n",
+    "    \n",
+    "    def __init__(self, cc, door, carType):\n",
+    "        self.cc = cc\n",
+    "        self.door = door\n",
+    "        self.carType = carType\n",
+    "        \n",
+    "    def display(self):\n",
+    "        print('자동차는 %d cc이고, 문짝은 %d개, 타입은 %s\"\n",
+    "              \n",
+    "              % (self.cc, self.door, self.carType))\n",
+    "              \n",
+    "car1 = Car(2000,4,'승용차')\n",
+    "\n",
+    "car2  = Car(3000, 5, 'SUV')\n",
+    "\n",
+    "car1.display()\n",
+    "car2.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "객체 생성\n",
+      "plus =  30\n",
+      "minus =  -10\n",
+      "객체 생성\n",
+      "plus = 160\n",
+      "minus = -20\n"
+     ]
+    }
+   ],
+   "source": [
+    "class calc_class:#객체가 만들어짐\n",
+    "    x=y=0\n",
+    "    \n",
+    "    def __init__(self,a,b):\n",
+    "        print('객체 생성')\n",
+    "        self.x = a\n",
+    "        self.y = b\n",
+    "        \n",
+    "    def plus(self):\n",
+    "        p = self.x + self.y\n",
+    "        return p\n",
+    "    # p 지역변수 self.x self.y 전역변수\n",
+    "    \n",
+    "    def minus(self):\n",
+    "        m = self.x - self.y\n",
+    "        return m\n",
+    "    \n",
+    "obj1 = calc_class(10, 20) # 인스턴스\n",
+    "\n",
+    "print('plus = ', obj1.plus())\n",
+    "print('minus = ', obj1.minus())\n",
+    "\n",
+    "obj03 = calc_class(70, 90) # 객체가 만들어짐\n",
+    "print('plus =', obj03.plus())\n",
+    "print('minus =', obj03.minus())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "객체 생성\n",
+      "plus =  30\n",
+      "minus =  -10\n",
+      "********************************************************************************\n",
+      "객체 생성\n",
+      "plus = 160\n",
+      "minus = -20\n",
+      "********************************************************************************\n",
+      "객체 생성\n",
+      "plus = 250\n",
+      "minus =  150\n",
+      "********************************************************************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "class calc_class:#객체가 만들어짐\n",
+    "    x=y=0\n",
+    "    \n",
+    "    def __init__(self,a,b):\n",
+    "        print('객체 생성')\n",
+    "        self.x = a\n",
+    "        self.y = b\n",
+    "        \n",
+    "    def plus(self):\n",
+    "        p = self.x + self.y\n",
+    "        return p\n",
+    "    # p 지역변수 self.x self.y 전역변수와 비슷한 성격을 갖고 있는 멤버변수\n",
+    "    \n",
+    "    def minus(self):\n",
+    "        m = self.x - self.y\n",
+    "        return m\n",
+    "    \n",
+    "obj1 = calc_class(10, 20) # 인스턴스\n",
+    "\n",
+    "print('plus = ', obj1.plus())\n",
+    "print('minus = ', obj1.minus())\n",
+    "\n",
+    "print('*'*80)\n",
+    "\n",
+    "obj03 = calc_class(70, 90) # 객체가 만들어짐\n",
+    "print('plus =', obj03.plus())\n",
+    "print('minus =', obj03.minus())\n",
+    "\n",
+    "print('*'*80)\n",
+    "\n",
+    "#(가) \n",
+    "\n",
+    "obj02 = calc_class(0, 0)\n",
+    "obj02.x= 200\n",
+    "obj02.y= 50\n",
+    "\n",
+    "print('plus =', obj02.plus())\n",
+    "print('minus = ', obj02.minus())\n",
+    "\n",
+    "print('*'*80)\n"
    ]
   }
  ],
