--- a/class_function.ipynb
+++ b/class_function.ipynb
@@ -349,15 +349,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 12) (3335676662.py, line 12)",
+     "evalue": "unterminated string literal (detected at line 12) (4116797893.py, line 12)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[11], line 12\u001b[1;36m\u001b[0m\n\u001b[1;33m    print('자동차는 %d cc이고, 문짝은 %d개, 타입은 %s\"\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 12)\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[33], line 12\u001b[1;36m\u001b[0m\n\u001b[1;33m    print('자동차는 %d cc이고, 문짝은 %d개, 타입은 %s\"\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 12)\n"
      ]
     }
    ],
@@ -373,10 +373,9 @@
     "        self.carType = carType\n",
     "        \n",
     "    def display(self):\n",
-    "        print('자동차는 %d cc이고, 문짝은 %d개, 타입은 %s\"\n",
-    "              \n",
+    "        print('자동차는 %d cc이고, 문짝은 %d개, 타입은 %s\"  \n",
     "              % (self.cc, self.door, self.carType))\n",
-    "              \n",
+    "\n",
     "car1 = Car(2000,4,'승용차')\n",
     "\n",
     "car2  = Car(3000, 5, 'SUV')\n",
@@ -496,6 +495,92 @@
     "print('minus = ', obj02.minus())\n",
     "\n",
     "print('*'*80)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# <069일차-실습-1-해답-소스코드-ver2>\n",
+    "# 069일차-실습-1-해답-ver2\n",
+    "# 클래스 정의\n",
+    "class calc_class :\n",
+    "    x = y = 0   # 멤버변수 선언 ('멤버' 의 뜻을 정확히 이해할 필요 있음)\n",
+    "    #\n",
+    "    def __init__(self, a, b): # 생성자 : 객체 생성 + [멤버변수 초기화]\n",
+    "        print('~~객체 생성~~')\n",
+    "        self.x = a # 10\n",
+    "        self.y = b # 20\n",
+    "    # \n",
+    "    def plus(self): # 멤버 메서드 / self : 멤버(변수+함수) 참조 객체\n",
+    "        p = self.x + self.y\n",
+    "        '''\n",
+    "        p : 지역변수의 개념임\n",
+    "        self.x, self.y : 전역변수의 개념(전역변수는 아니며 전역변수와 비슷한 역할을 한다는 뜻)  \n",
+    "        '''\n",
+    "        return p\n",
+    "    #\n",
+    "    def minus(self):\n",
+    "        m = self.x - self.y\n",
+    "        return m\n",
+    "# class(1) -> object(n) 생성\n",
+    "obj1 = calc_class(10, 20) # 생성자 -> 객체1  -> 참조변수\n",
+    "#\n",
+    "print('plus = ', obj1.plus()) # plus =  30\n",
+    "print('minus =', obj1.minus()) # minus = -10\n",
+    "#\n",
+    "# class(2) -> object(n) 생성 : n 번째의 뜻 \n",
+    "obj03 = calc_class(70,90) # 참조변수\n",
+    "print('plus = ', obj03.plus())\n",
+    "print('minus =', obj03.minus())\n",
+    "#\n",
+    "# class(3) -> object(n) 생성 : n 번째의 뜻 \n",
+    "obj2 = calc_class(0,0)  # 객체(object)를 만들고 객체의 주소를 obj2라는 참조변수에 할당함\n",
+    "                        # 이 때 인수로 0,0 을 할당함\n",
+    "print('obj2 type ---> ',type(obj2))\n",
+    "print('obj2 addr ---> ',id(obj2))\n",
+    "obj2.x = 200            # 객체의 맴버변수 x에 200을 할당함 \n",
+    "obj2.y = 50             # 객체의 맴버변수 y에 50을 할당함\n",
+    "print('plus = ', obj2.plus())\n",
+    "print('minus =', obj2.minus())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "자동차는 2000 cc이고, 문짝은 4개, 타입은 승용차\n",
+      "자동차는 3000 cc이고, 문짝은 5개, 타입은 SUV\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "    cc = 0 #엔진 cc\n",
+    "    door = 0 #문짝 개수\n",
+    "    carType = None # null\n",
+    "   \n",
+    "    def __init__(self, cc, door, carType):\n",
+    "        self.cc = cc\n",
+    "        self.door = door\n",
+    "        self.carType = carType\n",
+    "       \n",
+    "    def display(self):\n",
+    "        print('자동차는 %d cc이고, 문짝은 %d개, 타입은 %s' % (self.cc, self.door, self.carType))\n",
+    "          # %d, %s 등을 서식문자라 칭함 정수              정수         문자열\n",
+    "car1 = Car(2000,4,'승용차')\n",
+    " \n",
+    "car2  = Car(3000, 5, 'SUV')\n",
+    " \n",
+    "car1.display()\n",
+    "car2.display()\n"
    ]
   }
  ],
